tests/scenes/errors/abs_without_argument.torch
[orchestration type="OScript" load_steps=6 format=3 uid="uid://w48nnx8w4vhr"]

[obj type="OScriptFunction" id="OScriptFunction_lnixc"]
guid = "E6806D91-4D2B-469D-B46A-D7A42A99AB19"
method = {
"name": &"_ready",
"flags": 8
}
id = 0

[obj type="OScriptGraph" id="OScriptGraph_orolp"]
graph_name = &"EventGraph"
flags = 8
nodes = Array[int]([0, 1, 2])
functions = Array[int]([0])

[obj type="OScriptNodeEvent" id="OScriptNodeEvent_2ityq"]
function_id = "E6806D91-4D2B-469D-B46A-D7A42A99AB19"
id = 0
size = Vector2(139, 66)
position = Vector2(380, 220)
pin_data = Array[Dictionary]([{
"pin_name": &"ExecOut",
"dir": 1,
"flags": 4
}])

[obj type="OScriptNodeCallBuiltinFunction" id="OScriptNodeCallBuiltinFunction_84038"]
function_name = &"prints"
flags = 33
method = {
"name": &"prints",
"flags": 17,
"args": [{
"name": &"arg1",
"usage": 131078
}]
}
variable_arg_count = 0
id = 1
size = Vector2(113, 127)
position = Vector2(580, 220)
pin_data = Array[Dictionary]([{
"pin_name": &"ExecIn",
"flags": 4
}, {
"pin_name": &"ExecOut",
"dir": 1,
"flags": 4
}, {
"pin_name": &"arg1",
"flags": 2,
"usage": 131078
}])

[obj type="OScriptNodeCallBuiltinFunction" id="OScriptNodeCallBuiltinFunction_7x18o"]
function_name = &"abs"
method = {
"name": &"abs",
"return": {
"usage": 131078
},
"args": [{
"name": &"x",
"usage": 131078
}]
}
id = 2
size = Vector2(106, 66)
position = Vector2(420, 320)
pin_data = Array[Dictionary]([{
"pin_name": &"x",
"flags": 2,
"usage": 131078
}, {
"pin_name": &"return_value",
"dir": 1,
"flags": 1026,
"usage": 131078
}])

[resource]
base_type = &"Node"
brief_description = "Empty template suitable for all Objects"
functions = Array[OScriptFunction]([SubResource("OScriptFunction_lnixc")])
connections = Array[int]([0, 0, 1, 0, 2, 0, 1, 1])
nodes = Array[OScriptNode]([SubResource("OScriptNodeEvent_2ityq"), SubResource("OScriptNodeCallBuiltinFunction_84038"), SubResource("OScriptNodeCallBuiltinFunction_7x18o")])
graphs = Array[OScriptGraph]([SubResource("OScriptGraph_orolp")])
